@@ -1,7 +1,7 @@
 #  File src/library/stats/R/distn.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2016 The R Core Team
+#  Copyright (C) 1995-2018 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -133,8 +133,7 @@ qbeta <- function(p, shape1, shape2, ncp=0, lower.tail = TRUE, log.p = FALSE) {
     else .Call(C_qnbeta, p, shape1, shape2, ncp, lower.tail, log.p)
 }
 rbeta <- function(n, shape1, shape2, ncp = 0) {
-    if(is.na(ncp)) { warning("NAs produced"); rep(NaN, n) }
-    else if(ncp == 0) .Call(C_rbeta, n, shape1, shape2)
+    if(missing(ncp)) .Call(C_rbeta, n, shape1, shape2)
     else {
         X <- rchisq(n, 2*shape1, ncp =ncp)
         X/(X + rchisq(n, 2*shape2))
@@ -212,7 +211,6 @@ qf <- function(p, df1, df2, ncp, lower.tail = TRUE, log.p = FALSE) {
 rf <- function(n, df1, df2, ncp)
 {
     if(missing(ncp)) .Call(C_rf, n, df1, df2)
-    else if(is.na(ncp)) { warning("NAs produced"); rep(NaN, n) }
     else (rchisq(n, df1, ncp=ncp)/df1)/(rchisq(n, df2)/df2)
 }
 
