@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2018-01-07 r74095) -- "Unsuffered Consequences"
+R Under development (unstable) (2018-01-11 r74106) -- "Unsuffered Consequences"
 Copyright (C) 2018 The R Foundation for Statistical Computing
 Platform: x86_64-pc-linux-gnu (64-bit)
 
@@ -1463,6 +1463,16 @@ rweibull (4, ..): 1 2  [Ok]
 + 	  -3.2e-8 > d3qb, d3qb > -3.1e-6,
 + 	  diff(d3qb) > 1e-9)
 > ## had discontinuity (from wrong jump out of Newton) in R <= 3.3.2
+> 
+> 
+> ## rt() [PR#17306];  rf() and rbeta() [PR#17375] with non-scalar 'ncp'
+> nc <- c(NA, 1); iN <- is.na(rep_len(nc, 3))
+> ## each gives warning  "NAs produced":
+> assertWarning(T <- rt   (3, 4,   ncp = nc))
+> assertWarning(F <- rf   (3, 4,5, ncp = nc))
+> assertWarning(B <- rbeta(3, 4,5, ncp = nc))
+> stopifnot(identical(iN, is.na(T)), identical(iN, is.na(F)), identical(iN, is.na(B)))
+> ## was not handled correctly, notably with NA's in ncp, in R <= 3.4.(2|3)
 > 
 > 
 > 
