@@ -562,6 +562,9 @@
 
       \item \code{sum(<large ints>, <stuff>)} is more consistent.
       (\PR{17372})
+
+      \item \code{rf()} and \code{rbeta()} now also work correctly when \code{ncp}
+      is not scalar, notably when (partly) \code{NA}.  (\PR{17375})
     }
   }
 }
